| Bug #44663 | Unused replication options prevent server from starting. | ||
|---|---|---|---|
| Submitted: | 5 May 12:57 | Modified: | 12 Nov 15:44 |
| Reporter: | Luís Soares | ||
| Status: | Closed | ||
| Category: | Server: Replication | Severity: | S3 (Non-critical) |
| Version: | 5.1, 6.0 bzr | OS: | Any |
| Assigned to: | Alfranio Correia | Target Version: | |
| Tags: | option dependency, server startup abort | ||
| Triage: | Triaged: D4 (Minor) | ||
[5 May 13:32]
Sveta Smirnova
Thank you for the report. Verified as described.
[12 Jun 4:00]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/76153 2914 Alfranio Correia 2009-06-12 BUG#44663 Unused replication options prevent server from starting. The use of option log_slave_updates without log_bin was preventing the server from starting. To fix the problem, we replaced the error message and the exit call by a warning message.
[3 Jul 21:19]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/77940 2914 Alfranio Correia 2009-07-03 BUG#44663 Unused replication options prevent server from starting. The use of option log_slave_updates without log_bin was preventing the server from starting. To fix the problem, we replaced the error message and the exit call by a warning message.
[8 Jul 3:49]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/78178 3440 Alfranio Correia 2009-07-08 BUG#44663 Unused replication options prevent server from starting. The use of option log_slave_updates without log_bin was preventing the server from starting. To fix the problem, we replaced the error message and the exit call by a warning message.
[10 Jul 13:20]
Bugs System
Pushed into 5.4.4-alpha (revid:anozdrin@bk-internal.mysql.com-20090710111017-bnh2cau84ug1hvei) (version source revid:alfranio.correia@sun.com-20090709225859-kri2kkweytz6zex0) (merge vers: 5.4.4-alpha) (pib:11)
[13 Jul 14:05]
Jon Stephens
Documented bugfix in the 5.4.4 changelog as follows:
The server failed to start when using the --log_slave_updates
option without also using the --log_bin option. Now in such
cases, only a warning message is generated.
[13 Aug 0:00]
Paul DuBois
Noted in 5.4.2 changelog because next 5.4 version will be 5.4.2 and not 5.4.4.
[15 Aug 0:51]
Paul DuBois
Ignore previous comment about 5.4.2.
[29 Sep 15:39]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/85009 3114 Alfranio Correia 2009-09-29 BUG#44663 Unused replication options prevent server from starting. NOTE: Backporting the patch to next-mr. The use of option log_slave_updates without log_bin was preventing the server from starting. To fix the problem, we replaced the error message and the exit call by a warning message.
[27 Oct 10:48]
Bugs System
Pushed into 6.0.14-alpha (revid:alik@sun.com-20091027094604-9p7kplu1vd2cvcju) (version source revid:zhenxing.he@sun.com-20091026140226-uhnqejkyqx1aeilc) (merge vers: 6.0.14-alpha) (pib:13)
[28 Oct 7:32]
Jon Stephens
Also documented in the 6.0.14 changelog. Closed.
[12 Nov 9:18]
Bugs System
Pushed into 5.5.0-beta (revid:alik@sun.com-20091110093229-0bh5hix780cyeicl) (version source revid:alik@sun.com-20091027095744-rf45u3x3q5d1f5y0) (merge vers: 5.5.0-beta) (pib:13)
[12 Nov 15:44]
Jon Stephens
Also documented in the 5.5.0 changelog; closed.

Description: There are some options that if set, prevent the server from starting, because they depend on other options that are not set. For example, "log-slave-updates", depends on "log-bin". Searching in mysqld.cc I find: if (opt_log_slave_updates && !opt_bin_log) { sql_print_error("You need to use --log-bin to make " "--log-slave-updates work."); unireg_abort(1); } The same happens with "binlog-format" which prevents the server from starting if "log-bin" is not set. However, this was already reported in BUG#42928. How to repeat: Inspect the code, or start server with --log-slave-updates without --log-bin enabled. Suggested fix: Maybe, printout a warning instead of an error and let the server proceed with startup.