BUG#44663 Unused replication options prevent server from starting.

NOTE: Backporting the patch to next-mr.
            
The use of option log_slave_updates without log_bin was preventing the server
from starting. To fix the problem, we replaced the error message and the exit
call by a warning message.